--- a/ch04/todo-list/todo-web.yaml
+++ b/ch04/todo-list/todo-web.yaml
@@ -26,6 +26,10 @@ spec:
       containers:
         - name: web
           image: kiamol/ch04-todo-list
+          resources:
+            limits:
+              memory: "128Mi"
+              cpu: "500m" 
           env:
           - name: Logging__LogLevel__Default
             value: Warning
