--- a/ch05/lab/todo-list/proxy.yaml
+++ b/ch05/lab/todo-list/proxy.yaml
@@ -71,7 +71,13 @@ spec:
             - name: config
               mountPath: "/etc/nginx/"
               readOnly: true
+            - name: cache
+              mountPath: "/data/nginx/cache"
       volumes:
         - name: config
           configMap:
             name: todo-proxy-lab-configmap
+        - name: cache
+          hostPath:
+            path: /
+            type: Directory
