--- a/ch05/todo-list/persistentVolume.yaml
+++ b/ch05/todo-list/persistentVolume.yaml
@@ -1,14 +1,15 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv01
+  name: pv03
 spec:
   capacity:
     storage: 50Mi
   accessModes:
     - ReadWriteOnce
+  storageClassName: local-storage
   local:
-    path: /volumes/pv01 
+    path: /run/desktop/mnt/c
   nodeAffinity:
     required:
       nodeSelectorTerms:
