--- a/ch05/todo-list/postgres-persistentVolumeClaim.yaml
+++ b/ch05/todo-list/postgres-persistentVolumeClaim.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgres-pvc
+  name: postgres-pvc3
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 40Mi
-  storageClassName: ""
+  storageClassName: local-storage
