--- a/ch07/lab/pi/web.yaml
+++ b/ch07/lab/pi/web.yaml
@@ -14,6 +14,25 @@ spec:
       labels:
         app: pi-web
     spec:
+      initContainers:
+        - name: init-script-1
+          image: kiamol/ch03-sleep
+          command: ['sh', '-c', "echo '#!/bin/sh\ndotnet Pi.Web.dll -m web' > /init/startup.sh"]
+          volumeMounts:
+            - name: init
+              mountPath: "/init"
+        - name: init-script-2
+          image: kiamol/ch03-sleep
+          command: ['sh', '-c', "chmod +x /init/startup.sh"]
+          volumeMounts:
+            - name: init
+              mountPath: "/init"
+        - name: init-version
+          image: kiamol/ch03-sleep
+          command: ['sh', '-c', "echo 'ch07-lab' > /init/version.txt"]
+          volumeMounts:
+            - name: init
+              mountPath: "/init"
       containers:
         - image: kiamol/ch05-pi
           command: ["/scripts/startup.sh"]
@@ -21,3 +40,18 @@ spec:
           ports:
             - containerPort: 80
               name: http
+          volumeMounts:
+            - name: init
+              mountPath: "/scripts"
+        - name: server
+          image: kiamol/ch03-sleep  
+          command: ['sh', '-c', 'while true; do echo -e "HTTP/1.1 200 OK\nContent-Type: text/plain\nContent-Length: 9\n\n$(cat /init/version.txt)" | nc -l -p 8080; done']
+          ports:
+            - containerPort: 8080
+              name: http
+          volumeMounts:
+            - name: init
+              mountPath: "/init"
+      volumes:
+        - name: init
+          emptyDir: {}
